create_secrets.yml

--- a/.github/workflows/create_secrets.yml
+++ b/.github/workflows/create_secrets.yml
@@ -1,9 +1,9 @@
 name: "Create Repository Secrets"
 
 on:
-  push:
+  create:  # Runs when a new repo is created
     branches:
-      - main
+      - main  # Change to the default branch of your template repo
 
 jobs:
   create-secrets:
@@ -23,7 +23,7 @@ jobs:
 
       - name: Run Secret Creation Script
         env:
-          GIT_TOKEN: ${{ secrets.PAT_TOKEN }}  # Use PAT instead of GITHUB_TOKEN
+          GIT_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITHUB_OWNER: ${{ github.repository_owner }}
           GITHUB_REPO: ${{ github.event.repository.name }}
         run: python create_secrets.py
